argocd/apps/paperless-ngx/paperless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-service
  namespace: paperless
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: paperless-ngx
