argocd/apps/paperless-ngx/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: paperless-ngx
spec:
  ports:
  - port: 6379
  selector:
    app: redis
