argocd/apps/paperless-ngx/paperless-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  rules:
  - host: paperless.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  paperless-service
            port:
              number: 8000
  tls:
  - secretName: paperless-certificates-greyroom-net-production # <=== Use the name defined in Certificate resource.
